--- a/workshop-files/config.json
+++ b/workshop-files/config.json
@@ -1,10 +1,10 @@
 {
   "steamPublishedID": "2814833105",
-  "title": "Metalicize",
-  "description": "Grants +1 metalicize on new games each time you die",
+  "title": "Dexterity on Death",
+  "description": "Grants +1 dexterity on new games each time you die",
   "visibility": "public",
   "changeNote": "",
   "tags": [
-    "easy", "deengames", "Deen Games", "metalicize"
+    "easy", "deengames", "Deen Games", "dexterity"
   ]
 }
