--- a/workshop-files/config.json
+++ b/workshop-files/config.json
@@ -1,10 +1,13 @@
 {
-  "steamPublishedID": "2814833105",
+  "steamPublishedID": "2987562094",
   "title": "Dexterity on Death",
   "description": "Grants +1 dexterity on new games each time you die",
   "visibility": "public",
   "changeNote": "",
   "tags": [
-    "easy", "deengames", "Deen Games", "dexterity"
+    "easy",
+    "deengames",
+    "Deen Games",
+    "dexterity"
   ]
 }
